Fixed that stupid vertical align bug on search box

--- a/public/stylesheets/sass/ravana.sass
+++ b/public/stylesheets/sass/ravana.sass
@@ -19,6 +19,7 @@ h1,h2,h3,h4,h5,h6
     form
       height: 33px
       #q
+        vertical-align: top
         margin-top: 0
         margin-bottom: 0
 	
